Fixed vertical alignment in main nav

--- a/cypherpunk-com/src/app/components/navigation/navigation.component.scss
+++ b/cypherpunk-com/src/app/components/navigation/navigation.component.scss
@@ -12,7 +12,7 @@
 
   .nav-right {
     float: right;
-    padding: 30px 16px 0 0;
+    padding: 28px 16px 0 0;
 
     ul {
       list-style-type: none;
@@ -41,7 +41,7 @@
   height: 38px;
   border: 1px solid #1A474C;
   border-radius: 5px;
-  margin-top: -7px;
+  margin-top: -9px;
   padding-top: 8px;
   text-align: center;
   cursor: pointer;
